--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,11 @@
             <artifactId>tika-parsers</artifactId>
             <version>1.27</version>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>7.1.16</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
