--- a/pom.xml
+++ b/pom.xml
@@ -304,6 +304,11 @@
             <artifactId>kernel</artifactId>
             <version>7.1.16</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.4.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
